# wheeler-memory

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: cli.md  future.md  install.md
docs/assets/: README.md
open_webui_setup/: launch_open_webui.sh  launch_pipelines.sh  setup_open_webui.sh
open_webui_setup/pipelines/: requirements.txt  wheeler_memory_pipeline.py
scripts/: bench_gpu.py  scrub_brick.py  test_consolidation.py  test_diversity.py  test_diversity_math.py  test_eviction.py  test_paraphrase.py  test_paraphrase_embed.py  test_reconstruction.py  test_warming.py  wheeler_forget.py  wheeler_sleep.py  wheeler_ui.py
tests/: test_chunking.py  test_dynamics.py  test_oscillation.py  test_reconstruction.py  test_warming.py
ui/: dashboard.html  demo.html
wheeler memory/: .gitignore  README.md  REORGANIZATION_SUMMARY.md  TODO_NPU_SETUP.md  pyproject.toml  ralph_npu_setup_prompt.md
wheeler memory/docs/: api.md  architecture.md  cli.md  concepts.md  design.md  future.md  gpu.md  install.md
wheeler memory/scripts/: system_info.py  test_attention.py  test_trauma.py  wheeler_agent.py  wheeler_forget.py  wheeler_recall.py  wheeler_sleep.py  wheeler_store.py  wheeler_temps.py  wheeler_trauma.py  wheeler_ui.py
wheeler memory/scripts/experiments/: __init__.py  test_basin.py  test_lichtenberg.py  test_metrics.py  test_resonance.py  test_structured.py  test_synthesis.py
wheeler memory/tests/: conftest.py  test_attention.py  test_brick.py  test_consolidation.py  test_datasets.py  test_diversity.py  test_eviction.py  test_hashing.py  test_polarity.py  test_storage.py  test_temperature.py
wheeler memory/ui/: README.md  chat.html  dashboard.html  demo.html
wheeler memory/wheeler_3d_viewer/: Dockerfile  app.py
wheeler memory/wheeler_3d_viewer/static/: main.js
wheeler memory/wheeler_memory/: __init__.py  agent.py  dynamics.py  eviction.py  gpu_dynamics.py  rotation.py  storage.py  temperature.py  trauma.py  warming.py
wheeler memory/wheeler_memory/gpu/: Makefile  ca_kernel_v2.hip
wheeler memory/wheeler_memory/theories/: __init__.py  basin.py  lichtenberg.py  metrics.py  resonance.py  structured.py  synthesis.py
wheeler_3d_viewer/: README.md  requirements.txt
wheeler_3d_viewer/static/: index.html
wheeler_memory/: __init__.py  attention.py  brick.py  chunking.py  consolidation.py  dynamics.py  embedding.py  gpu_dynamics.py  hardware.py  hashing.py  oscillation.py  polarity.py  reconstruction.py  storage.py
wheeler_memory/gpu/: ca_kernel.hip
