[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wheeler-memory"
version = "0.1.0"
description = "Cellular automata-based associative memory system"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.14",
    "matplotlib>=3.9",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
embed = ["sentence-transformers>=3.0"]

[project.scripts]
wheeler-store = "scripts.wheeler_store:main"
wheeler-recall = "scripts.wheeler_recall:main"
wheeler-diversity = "scripts.test_diversity:main"
wheeler-diversity-math = "scripts.test_diversity_math:main"
wheeler-scrub = "scripts.scrub_brick:main"
wheeler-temps = "scripts.wheeler_temps:main"
wheeler-bench-gpu = "scripts.bench_gpu:main"
wheeler-info = "scripts.system_info:main"
wheeler-forget = "scripts.wheeler_forget:main"
wheeler-sleep = "scripts.wheeler_sleep:main"
wheeler-trauma = "scripts.wheeler_trauma:main"
wheeler-apple-test = "scripts.experiments.test_synthesis:main"
wheeler-resonance = "scripts.experiments.test_resonance:main"
wheeler-topology = "scripts.experiments.test_basin:main"

[tool.setuptools.packages.find]
include = ["wheeler_memory*", "scripts*"]
