[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wheeler-memory"
version = "0.1.0"
description = "Cellular automata-based associative memory system"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.14",
    "matplotlib>=3.9",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
embed = ["sentence-transformers>=3.0"]

[project.scripts]
wheeler-store = "scripts.wheeler_store:main"
wheeler-recall = "scripts.wheeler_recall:main"
wheeler-temps = "scripts.wheeler_temps:main"
wheeler-forget = "scripts.wheeler_forget:main"
wheeler-sleep = "scripts.wheeler_sleep:main"
wheeler-agent = "scripts.wheeler_agent:main"
wheeler-info = "scripts.system_info:main"
wheeler-bench-gpu = "scripts.bench_gpu:main"
wheeler-scrub = "scripts.scrub_brick:main"
wheeler-ui = "scripts.wheeler_ui:main"

[project.urls]
Homepage = "https://github.com/fantomx42/wheeler-memory"
Repository = "https://github.com/fantomx42/wheeler-memory"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.setuptools.packages.find]
include = ["wheeler_memory*", "scripts*"]
